RESOLVED FIXED195980
AI rule for ValueBitNot/ValueBitXor/ValueBitAnd/ValueBitOr is wrong
https://bugs.webkit.org/show_bug.cgi?id=195980
Summary AI rule for ValueBitNot/ValueBitXor/ValueBitAnd/ValueBitOr is wrong
Saam Barati
Reported 2019-03-19 18:16:02 PDT
Should be SpecInt32Only, not SpecBoolInt32
Attachments
patch (1.70 KB, patch)
2019-03-19 18:25 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-03-19 18:25:26 PDT
Yusuke Suzuki
Comment 2 2019-03-19 18:26:09 PDT
Comment on attachment 365280 [details] patch r=me
WebKit Commit Bot
Comment 3 2019-03-20 09:17:49 PDT
Comment on attachment 365280 [details] patch Clearing flags on attachment: 365280 Committed r243206: <https://trac.webkit.org/changeset/243206>
WebKit Commit Bot
Comment 4 2019-03-20 09:17:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-03-20 09:20:47 PDT
Note You need to log in before you can comment on or make changes to this bug.