AI rule for ValueBitNot/ValueBitXor/ValueBitAnd/ValueBitOr is wrong https://bugs.webkit.org/show_bug.cgi?id=195980

Reviewed by Yusuke Suzuki.

They were all saying they could be type: (SpecBoolInt32, SpecBigInt)
However, they should have been type: (SpecInt32Only, SpecBigInt)

* dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):


Canonical link: https://commits.webkit.org/210272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243206 268f45cc-cd09-0410-ab3c-d52691b4dbfc